--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,10 +9,23 @@ on:
       - main
 
 jobs:
-  Hello_github_actions:
+  build_and_test:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        run: echo "Hello, GitHub Actions!"
-      
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run tests
+        run: npm test
+
+      - name: Run the app
+        run: node index.js
