--- a/.github/workflows/multi_event_pipeline.yml
+++ b/.github/workflows/multi_event_pipeline.yml
@@ -19,9 +19,10 @@ jobs:
               run: echo "Hello World from Multi Event Pipeline"
 
     on-pull_request: #job name
-     runs-on: ubuntu-latest
-     steps:
-       - name: "Runing Pull Request Event"
-         run: echo "Running on Pull Request request"         
+        if: github.event_name == 'pull_request'
+        runs-on: ubuntu-latest
+        steps:
+            - name: "Runing Pull Request Event"
+              run: echo "Running on Pull Request request"
 
           
